o) Fixed bug which would cause invalid invisible counts on oper-up in case
   operator::umodes and/or general::oper_umodes contains 'invisible'
o) Removed broken LazyLinks
o) Removed --disable-gline-voting configure option
o) Minor code optimizations and cleanups
o) ACCEPT now supports nick!user@host masks
o) Unregistered clients are no longer allowed to request the server's motd

-- ircd-hybrid-7.2.3 Release Notes
o) Added ircd-italian.lang language file
o) Added -full to etrace
o) Added +C for opers
o) Fixed core in temp channel resv
o) Fixed CHALLENGE to work with user=IP
o) Misc fixes to TESTMASK and TESTLINE
o) Added support for nick masks to TESTMASK
o) Fixed /modlist to show up whether or not a module is resident
o) Fixed command line arguments handling to allow more than one switch
o) Fixed numeric delivery for mixed TS5 target on the other side of a TS6 server.


-- ircd-hybrid-7.2.2 Release Notes
o) Added channel::disable_fake_channels config directive
o) Fixed broken FORCEJOIN  (contrib)
o) Added missing documentation for connect::vhost
o) Fixed problem with G-Line voting
o) Fixed "STATS ?" so it doesn't report negative traffic statistics
o) Fixed core in m_mkpasswd.c  (contrib)
o) Reduced memory usage for channel members
o) Added general::stats_e_disabled which simply disables "STATS e"
   for other operators and administrators
o) Ignore signal SIGXFSZ to prevent the daemon from dying on missconfigured
   file size limits
o) Slight optimizations to the block allocator
o) Fixed harmless bug that could result in incorrect bytes sent statistics
   in "STATS t"
o) "STATS y|Y" now shows whether a class is active or disabled
o) Added ircd-brazilian_pt.lang language file
o) Misc. ACCEPT fixes. E.g. don't remove an accept record if a client is
   changing between equivalent nicknames like 'nick' and 'NiCk'.
o) Minor resolv.conf parser fixes.  Added missing support for ';' comments
o) Fixed core on MODRESTART


-- ircd-hybrid-7.2.1 Release Notes