@@ -1000,13 +1000,6 @@ general {
 	dots_in_ident = 2;
 
 	/*
-	 * dot_in_ip6_addr: ircd-hybrid-6.0 and earlier will disallow hosts 
-	 * without a '.' in them.  This will add one to the end.  Only needed
-	 * for older servers.
-	 */
-	dot_in_ip6_addr = no;
-
-	/*
 	 * min_nonwildcard: the minimum non wildcard characters in k/d/g lines
 	 * placed via the server.  klines hand placed are exempt from limits.
 	 * wildcard chars: '.' ':' '*' '?' '@' '!' '#'
