@@ -307,7 +307,6 @@ general {
 	default_floodcount = 10;
 	failed_oper_notice = yes;
 	dots_in_ident=2;
-	dot_in_ip6_addr = yes;
 	min_nonwildcard = 4;
 	min_nonwildcard_simple = 3;
 	max_accept = 20;
